# rust-client-server

./: Cargo.toml  README.md  paper.docx
src/: util.py
src/client/: client.rs
src/server/: server.rs
test/: client-config.json  client-config1.json  client-config2.json
